openshift/cluster-compare/engine-web-ui/deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cluster-compare
  labels:
    app.kubernetes.io/name: cluster-compare
    app.kubernetes.io/part-of: cluster-compare
    argocd.argoproj.io/managed-by: openshift-gitops
