openshift/cluster-compare/engine-web-ui/deploy/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: cluster-compare-engine
  namespace: cluster-compare
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cluster-compare-engine
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: cluster-compare-engine
    spec:
      containers:
        - name: cluster-compare-engine
          image: quay.io/marrober/cluster-compare-engine
          command:
            - node
            - server.js
            - "--verbose"
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
