openshift/cluster-compare/engine-web-ui/deploy/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: cluster-compare-engine
  namespace: cluster-compare
  labels:
    app.kubernetes.io/name: cluster-compare-engine
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cluster-compare-engine
