openshift/cluster-compare/engine-web-ui/deploy/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: cluster-compare-engine
  namespace: cluster-compare
spec:
  path: /
  to:
    kind: Service
    name: cluster-compare-engine
    weight: 100
  port:
    targetPort: 8443-tcp
  tls:
    termination: edge
  wildcardPolicy: None
